@@ -846,6 +846,8 @@ enum OPENPANELINFO_SORTMODES
 	SM_STREAMSSIZE               = 13,
 	SM_FULLNAME                  = 14,
 	SM_CHTIME                    = 15,
+
+	SM_COUNT
 };
 
 struct PanelInfo
